--- a/content/docs-lite/zh/docs/Administration/三权分立.md
+++ b/content/docs-lite/zh/docs/Administration/三权分立.md
@@ -4,13 +4,13 @@
 
 在实际业务管理中，为了避免系统管理员拥有过度集中的权利带来高风险，可以设置三权分立。将系统管理员的部分权限分立给安全管理员和审计管理员，形成系统管理员、安全管理员和审计管理员三权分立。
 
-三权分立后，系统管理员将不再具有CREATEROLE属性（安全管理员）和AUDITADMIN属性（审计管理员）能力。即不再拥有创建角色和用户的权限，并不再拥有查看和维护数据库审计日志的权限。关于CREATEROLE属性和AUDITADMIN属性的更多信息请参考[CREATE ROLE](CREATE-ROLE.md)。
+三权分立后，系统管理员将不再具有CREATEROLE属性（安全管理员）和AUDITADMIN属性（审计管理员）能力。即不再拥有创建角色和用户的权限，并不再拥有查看和维护数据库审计日志的权限。关于CREATEROLE属性和AUDITADMIN属性的更多信息请参考[CREATE ROLE](../SQLReference/CREATE-ROLE.md)。
 
 三权分立后，系统管理员只会对自己作为所有者的对象有权限。
 
 初始用户的权限不受三权分立设置影响。因此建议仅将此初始用户作为DBA管理用途，而非业务应用。
 
-三权分立的设置办法为：将参数[enableSeparationOfDuty](操作审计.md#zh-cn_topic_0283136929_zh-cn_topic_0237124747_zh-cn_topic_0059777487_s0a79ea55efa1431d8e3e06e4b8219cd6)设置为on。
+三权分立的设置办法为：将参数[enableSeparationOfDuty](../DataBaseReference/操作审计.md#zh-cn_topic_0283136929_zh-cn_topic_0237124747_zh-cn_topic_0059777487_s0a79ea55efa1431d8e3e06e4b8219cd6)设置为on。
 
 三权分立前的权限详情及三权分立后的权限变化，请分别参见[表1](#zh-cn_topic_0283137357_zh-cn_topic_0237121101_zh-cn_topic_0155089861_t58384b51e1fd4e67ab393f4bb6103a16)和[表2](#zh-cn_topic_0283137357_zh-cn_topic_0237121101_zh-cn_topic_0155089861_t12fe700a5db44d748cb0dc123012289b)。
 
