--- a/content/docs-lite/zh/docs/Administration/审计概述.md
+++ b/content/docs-lite/zh/docs/Administration/审计概述.md
@@ -6,7 +6,7 @@
 
 关于审计功能，用户需要了解以下几点内容：
 
--   审计总开关[audit\_enabled](审计开关.md#zh-cn_topic_0283137524_zh-cn_topic_0237124745_zh-cn_topic_0059777744_sb3d1b703f24c49f096b36087a60fdfcd)支持动态加载。在数据库运行期间修改该配置项的值会立即生效，无需重启数据库。默认值为on，表示开启审计功能。
+-   审计总开关[audit\_enabled](../DataBaseReference/审计开关.md#zh-cn_topic_0283137524_zh-cn_topic_0237124745_zh-cn_topic_0059777744_sb3d1b703f24c49f096b36087a60fdfcd)支持动态加载。在数据库运行期间修改该配置项的值会立即生效，无需重启数据库。默认值为on，表示开启审计功能。
 -   除了审计总开关，各个审计项也有对应的开关。只有开关开启，对应的审计功能才能生效。
 -   各审计项的开关支持动态加载。在数据库运行期间修改审计开关的值，不需要重启数据库便可生效。
 
