--- a/content/docs-lite/zh/docs/Administration/修复账本数据库.md
+++ b/content/docs-lite/zh/docs/Administration/修复账本数据库.md
@@ -7,7 +7,7 @@
 
 ## 背景信息<a name="zh-cn_topic_0059778013_s15667753cb2542158661ae3f96cab067"></a>
 
--   当在异常情况或表被损坏时需要使用[ledger\_gchain\_repair\(tex...](账本数据库的函数.md#li1188094681312)或[ledger\_hist\_repair\(text,...](账本数据库的函数.md#li688019463130)接口对全局区块表或用户历史表进行修复，修复后调用全局区块表或用户历史表校验接口结果为true。
+-   当在异常情况或表被损坏时需要使用[ledger\_gchain\_repair\(tex...](../SQLReference/账本数据库的函数.md#li1188094681312)或[ledger\_hist\_repair\(text,...](../SQLReference/账本数据库的函数.md#li688019463130)接口对全局区块表或用户历史表进行修复，修复后调用全局区块表或用户历史表校验接口结果为true。
 -   修复用户历史表的接口为pg\_catalog.ledger\_hist\_repair，操作为：
 
     ```
