--- a/content/docs-lite/zh/docs/Administration/用户权限设置.md
+++ b/content/docs-lite/zh/docs/Administration/用户权限设置.md
@@ -1,6 +1,6 @@
 # 用户权限设置<a name="ZH-CN_TOPIC_0289900074"></a>
 
--   给用户直接授予某对象的权限，请使用[GRANT](GRANT.md)。
+-   给用户直接授予某对象的权限，请使用[GRANT](../SQLReference/GRANT.md)。
 
     将Schema中的表或者视图对象授权给其他用户或角色时，需要将表或视图所属Schema的USAGE权限同时授予该用户或角色。否则用户或角色将只能看到这些对象的名称，并不能实际进行对象访问。
 
@@ -20,7 +20,7 @@
         openGauss=# CREATE ROLE lily WITH CREATEDB PASSWORD "xxxxxxxxx";
         ```
 
-    2.  给角色赋予对象权限，请使用[GRANT](GRANT.md)。
+    2.  给角色赋予对象权限，请使用[GRANT](../SQLReference/GRANT.md)。
 
         例如，将模式tpcds的权限赋给角色lily后，将表tpcds.web\_returns的select权限赋给角色lily。
 
