--- a/content/docs-lite/zh/docs/Administration/审计概述.md
+++ b/content/docs-lite/zh/docs/Administration/审计概述.md
@@ -369,7 +369,7 @@
     “Non-SSL connection”表示未使用SSL方式连接数据库。如果需要高安全性时，请使用SSL连接。
 
     >![](public_sys-resources/icon-note.gif) **说明：** 
-    >gsql是本产品提供的命令行方式的数据库连接工具。更多的数据库连接办法可参考[连接数据库.md](连接数据库.md)。
+    >gsql是本产品提供的命令行方式的数据库连接工具。更多的数据库连接办法可参考[连接数据库.md](../GettingStarted/使用gsql访问openGauss.md)。
 
 3.  检查审计总开关状态。
     1.  用show命令显示审计总开关audit\_enabled的值。
