--- a/content/docs-lite/zh/docs/Administration/用户权限设置.md
+++ b/content/docs-lite/zh/docs/Administration/用户权限设置.md
@@ -39,5 +39,5 @@
         >当将角色的权限赋予用户时，角色的属性并不会传递到用户。
 
 
--   回收用户权限，请使用[REVOKE](REVOKE.md)。
+-   回收用户权限，请使用[REVOKE](../SQLReference/REVOKE.md)。
 
