--- a/content/docs-lite/zh/docs/Administratorguide/分析查询语句长时间运行的问题.md
+++ b/content/docs-lite/zh/docs/Administratorguide/分析查询语句长时间运行的问题.md
@@ -33,7 +33,7 @@
 
     查询会返回按执行时间长短从大到小排列的查询语句列表。第一条结果就是当前系统中执行时间长的查询语句。
 
-    如果当前系统较为繁忙，可以使用[TIMESTAMPDIFF](时间和日期处理函数和操作符.md#zh-cn_topic_0283136846_section5629194495516)函数通过限制current\_timestamp和query\_start大于某一阈值查看执行时间超过此阈值的查询语句。timestampdiff的第一个参数为时间差单位。例如，执行超过2分钟的查询语句可以通过如下语句查询。
+    如果当前系统较为繁忙，可以使用[TIMESTAMPDIFF](../SQLReference/时间和日期处理函数和操作符.md#zh-cn_topic_0283136846_section5629194495516)函数通过限制current\_timestamp和query\_start大于某一阈值查看执行时间超过此阈值的查询语句。timestampdiff的第一个参数为时间差单位。例如，执行超过2分钟的查询语句可以通过如下语句查询。
 
     ```
     SELECT query FROM pg_stat_activity WHERE (EXTRACT(DAY FROM (current_timestamp - query_start)) * 24 * 60 + EXTRACT(HOUR FROM (current_timestamp - query_start)) * 60 + EXTRACT(MINUTE FROM (current_timestamp - query_start))) > 2;
