--- a/content/docs-lite/zh/docs/DataBaseReference/用户自定义函数-33.md
+++ b/content/docs-lite/zh/docs/DataBaseReference/用户自定义函数-33.md
@@ -48,7 +48,7 @@
 
 >![](public_sys-resources/icon-notice.gif) **须知：** 
 >
->如果用户在pljava\_vmoptions中设置参数不满足上述取值范围，会在使用PL/Java语言函数时报错。此参数的详细说明参见[PL/pgSQL语言函数](PL-pgSQL语言函数.md)。
+>如果用户在pljava\_vmoptions中设置参数不满足上述取值范围，会在使用PL/Java语言函数时报错。此参数的详细说明参见[PL/pgSQL语言函数](../SQLReference/PL-pgSQL语言函数.md)。
 
 **默认值：**空
 
