--- a/content/docs-lite/zh/docs/DataBaseReference/其他优化器选项.md
+++ b/content/docs-lite/zh/docs/DataBaseReference/其他优化器选项.md
@@ -310,7 +310,7 @@ set sql_beta_feature=none;
 -   canonical\_pathkey：正则化pathkey生成置后。（pathkey：标记数据有序性键值的集合） 该参数打开之后，可能会导致带 order by 等语句，在有外连接的情况下，输出数据语义和标准不一样。
 -   index\_cost\_with\_leaf\_pages\_only：估算索引代价时考虑索引叶子结点。
 -   partition\_opfusion：开启分区表优化。
--   a\_style\_coerce：开启Decode类型转换规则兼容O，详见[对于case，在ORA兼容模式下的处理](UNION-CASE和相关构造.md#section20337194392613)。
+-   a\_style\_coerce：开启Decode类型转换规则兼容O，详见[对于case，在ORA兼容模式下的处理](../SQLReference/UNION-CASE和相关构造.md#section20337194392613)。
 -   plpgsql_stream_fetchall：在存储过程中for loop或cursor上执行的sql走stream场景下，开启获取所有tuple结果。
 -   partition\_fdw\_on：支持基于分区表创建postgres foreign table下的相关SQL。
 -   predpush_same_level：开启predpush hint控制同层参数化路径的功能。
@@ -368,7 +368,7 @@ set sql_beta_feature=none;
 >-   比默认值大的正数数值增加了ANALYZE所需的时间，但是可能会改善优化器的估计质量。
 >-   调整此参数可能存在性能劣化的风险，如果某个查询劣化，可以考虑
 >    1.  恢复默认的统计信息。
->    2.  使用plan hint来调整到之前的查询计划。（详细参见[使用Plan Hint进行调优](使用Plan-Hint进行调优.md)）
+>    2.  使用plan hint来调整到之前的查询计划。（详细参见[使用Plan Hint进行调优](../PerformanceTuning/使用Plan-Hint进行调优.md)）
 >-   当此guc参数设置为负数时，如果计算的采样样本数大于等于总数据量的2%，且用户表的数据量小于1600000时，ANALYZE所需时间相比guc参数为默认值的时间会有所增加。
 >-   当此guc参数设置为负数时，则autoanalyze不生效。
 
@@ -584,7 +584,7 @@ set sql_beta_feature=none;
 >![](public_sys-resources/icon-note.gif) **说明：** 
 >
 >-   在开启enable\_sonic\_hashagg，且查询达到约束条件使用基于面向列的hash表设计的Hash Agg算子时，查询对应的Hash Agg算子内存使用通常可获得精简。但对于代码生成技术可获得显著性能提升的场景\([enable\_codegen](#zh-cn_topic_0283137690_zh-cn_topic_0237124719_zh-cn_topic_0059779049_sbe5e1dbabf214873baf37dbb7580a7a3)打开后获得较大性能提升\)，对应的算子查询性能可能会出现劣化。
->-   开启enable\_sonic\_hashagg，且查询达到约束条件使用基于面向列的hash表设计的Hash Agg算子时，在Explain Analyze/Performance的执行计划和执行信息中，算子显示为“Sonic Hash Aggregation”，而未达到该约束条件时，算子名称将显示为“Hash Aggregation”，Explain详解请参见[详解](详解.md)。
+>-   开启enable\_sonic\_hashagg，且查询达到约束条件使用基于面向列的hash表设计的Hash Agg算子时，在Explain Analyze/Performance的执行计划和执行信息中，算子显示为“Sonic Hash Aggregation”，而未达到该约束条件时，算子名称将显示为“Hash Aggregation”，Explain详解请参见[详解](../PerformanceTuning/详解.md)。
 
 **默认值：**on
 
@@ -603,7 +603,7 @@ set sql_beta_feature=none;
 >
 >-   当前开关仅适用于Inner Join的场景。
 >-   在开启enable\_sonic\_hashjoin，查询对应的Hash Inner算子内存使用通常可获得精简。但对于代码生成技术可获得显著性能提升的场景，对应的算子查询性能可能会出现劣化。
->-   开启enable\_sonic\_hashjoin，且查询达到约束条件使用基于面向列的hash表设计的Hash Join算子时，在Explain Analyze/Performance的执行计划和执行信息中，算子显示为“Sonic Hash Join”，而未达到该约束条件时，算子名称将显示为“Hash Join”，Explain详解请参见[详解](详解.md)。
+>-   开启enable\_sonic\_hashjoin，且查询达到约束条件使用基于面向列的hash表设计的Hash Join算子时，在Explain Analyze/Performance的执行计划和执行信息中，算子显示为“Sonic Hash Join”，而未达到该约束条件时，算子名称将显示为“Hash Join”，Explain详解请参见[详解](../PerformanceTuning/详解.md)。
 
 **默认值：**on
 
