--- a/content/docs-lite/zh/docs/DataBaseReference/平台和客户端兼容性.md
+++ b/content/docs-lite/zh/docs/DataBaseReference/平台和客户端兼容性.md
@@ -87,7 +87,7 @@
 
 >![](public_sys-resources/icon-notice.gif) **须知：** 
 >
->-   该参数只能在执行[CREATE DATABASE](create-database.md)命令创建数据库时通过dbcompatibility设置。
+>-   该参数只能在执行[CREATE DATABASE](../SQLReference/create-database.md)命令创建数据库时通过dbcompatibility设置。
 >-   在数据库中，该参数只能是确定的一个值，要么始终设置为A，要么始终设置为B，请勿任意改动，否则会导致数据库行为不一致。
 
 ## behavior\_compat\_options<a name="zh-cn_topic_0283137574_zh-cn_topic_0237124754_section1980124735516"></a>
