--- a/content/docs-lite/zh/docs/DataBaseReference/系统视图.md
+++ b/content/docs-lite/zh/docs/DataBaseReference/系统视图.md
@@ -4,7 +4,7 @@
 
 -   **[DV\_SESSION\_LONGOPS](DV_SESSION_LONGOPS.md)**  
 
--   **[GET\_GLOBAL\_PREPARED\_XACTS（废弃）](GET_GLOBAL_PREPARED_XACTS（废弃）.md)**  
+-   **[GET\_GLOBAL\_PREPARED\_XACTS（废弃）](GET_GLOBAL_PREPARED_XACTS_废弃.md)**  
 
 -   **[GS\_AUDITING](GS_AUDITING.md)**  
 
@@ -234,6 +234,5 @@
 
 -   **[GS\_LSC\_MEMORY\_DETAIL](GS_LSC_MEMORY_DETAIL.md)**  
 
--   **[GS\_WRITE\_TERM\_LOG](GS_WRITE_TERM_LOG.md)**  
 
 
