--- a/content/docs-lite/zh/docs/Administratorguide/例行维护表.md
+++ b/content/docs-lite/zh/docs/Administratorguide/例行维护表.md
@@ -81,7 +81,7 @@
     ```
 
     >![](public_sys-resources/icon-note.gif) **说明：** 
-    >VACUUM和ANALYZE会导致I/O流量的大幅增加，这可能会影响其他活动会话的性能。因此，建议通过“vacuum\_cost\_delay”参数设置《开发者指南》中“GUC参数说明 \> 资源消耗 \> 基于开销的清理延迟”。
+    >VACUUM和ANALYZE会导致I/O流量的大幅增加，这可能会影响其他活动会话的性能。因此，建议通过“vacuum\_cost\_delay”参数设置《数据库参考》中“GUC参数说明 \> 资源消耗 \> 基于开销的清理延迟”。
 
 3.  删除表
 
