--- a/content/docs-lite/zh/docs/GettingStarted/安装.md
+++ b/content/docs-lite/zh/docs/GettingStarted/安装.md
@@ -63,7 +63,7 @@
     >-   示例：sh install.sh -R \~/app -m primary -D \~/data -l \~/log --start -C "replconninfo1='localhost=xxx.xx.xx.x localport=xxxx remotehost=xxx.xx.xx.x remoteport=xxxx sslmode=verify-ca'"
     >
     >    -   操作步骤
-    >    -   准备证书、私钥。有关生成证书操作，请参考《开发者指南》中的“管理数据库安全 \> SSL证书管理 \> 证书生成”章节。   
+    >    -   准备证书、私钥。有关生成证书操作，请参考《数据库管理指南》中的“管理数据库安全 \> SSL证书管理 \> 证书生成”章节。   
     >    -   服务端各个配置文件名称约定：
     >        ```
     >        证书名称约定：server.crt。
