--- a/content/docs-lite/zh/docs/SQLReference/数据库执行语句函数.md
+++ b/content/docs-lite/zh/docs/SQLReference/数据库执行语句函数.md
@@ -2,28 +2,28 @@
 
 与数据库服务器的连接成功建立，便可以使用这里描述的函数执行SQL查询和命令。
 
--   **[PQclear](PQclear.md)**  
+-   **[PQclear](../Developerguide/PQclear.md)**  
 
--   **[PQexec](PQexec.md)**  
+-   **[PQexec](../Developerguide/PQexec.md)**  
 
--   **[PQexecParams](PQexecParams.md)**  
+-   **[PQexecParams](../Developerguide/PQexecParams.md)**  
 
--   **[PQexecParamsBatch](PQexecParamsBatch.md)**  
+-   **[PQexecParamsBatch](../Developerguide/PQexecParamsBatch.md)**  
 
--   **[PQexecPrepared](PQexecPrepared.md)**  
+-   **[PQexecPrepared](../Developerguide/PQexecPrepared.md)**  
 
--   **[PQexecPreparedBatch](PQexecPreparedBatch.md)**  
+-   **[PQexecPreparedBatch](../Developerguide/PQexecPreparedBatch.md)**  
 
--   **[PQfname](PQfname.md)**  
+-   **[PQfname](../Developerguide/PQfname.md)**  
 
--   **[PQgetvalue](PQgetvalue.md)**  
+-   **[PQgetvalue](../Developerguide/PQgetvalue.md)**  
 
--   **[PQnfields](PQnfields.md)**  
+-   **[PQnfields](../Developerguide/PQnfields.md)**  
 
--   **[PQntuples](PQntuples.md)**  
+-   **[PQntuples](../Developerguide/PQntuples.md)**  
 
--   **[PQprepare](PQprepare.md)**  
+-   **[PQprepare](../Developerguide/PQprepare.md)**  
 
--   **[PQresultStatus](PQresultStatus.md)**  
+-   **[PQresultStatus](../Developerguide/PQresultStatus.md)**  
 
 
