--- a/content/docs-lite/zh/docs/DataBaseReference/开发人员选项.md
+++ b/content/docs-lite/zh/docs/DataBaseReference/开发人员选项.md
@@ -4,7 +4,7 @@
 
 **参数说明：**设置是否允许修改系统表的结构。
 
-该参数属于POSTMASTER类型参数，请参考[表1](../Administration/参数设置.md#zh-cn_topic_0283137176_zh-cn_topic_0237121562_zh-cn_topic_0059777490_t91a6f212010f4503b24d7943aed6d846)中对应设置方法进行设置。
+该参数属于POSTMASTER类型参数，请参考[表1](重设参数.md#zh-cn_topic_0283137176_zh-cn_topic_0237121562_zh-cn_topic_0059777490_t91a6f212010f4503b24d7943aed6d846)中对应设置方法进行设置。
 
 **取值范围：**布尔型
 
@@ -21,7 +21,7 @@
 
 **参数说明：**控制打开各种断言检查。能够协助调试，当遇到奇怪的问题或者崩溃，请把此参数打开，因为它能暴露编程的错误。要使用这个参数，必须在编译openGauss的时候定义宏USE\_ASSERT\_CHECKING（通过configure选项 --enable-cassert完成）。
 
-该参数属于USERSET类型参数，请参考[表1](../Administration/参数设置.md#zh-cn_topic_0283137176_zh-cn_topic_0237121562_zh-cn_topic_0059777490_t91a6f212010f4503b24d7943aed6d846)中对应设置方法进行设置。
+该参数属于USERSET类型参数，请参考[表1](重设参数.md#zh-cn_topic_0283137176_zh-cn_topic_0237121562_zh-cn_topic_0059777490_t91a6f212010f4503b24d7943aed6d846)中对应设置方法进行设置。
 
 **取值范围：**布尔型
 
@@ -38,7 +38,7 @@
 
 **参数说明： **设置读取数据时是否忽略校验信息检查失败（但仍然会告警），继续执行可能导致崩溃，传播或隐藏损坏数据，无法从远程节点恢复数据及其他严重问题。不建议用户修改设置。
 
-该参数属于SUSET类型参数，请参考[表1](../Administration/参数设置.md#zh-cn_topic_0283137176_zh-cn_topic_0237121562_zh-cn_topic_0059777490_t91a6f212010f4503b24d7943aed6d846)中对应设置方法进行设置。
+该参数属于SUSET类型参数，请参考[表1](重设参数.md#zh-cn_topic_0283137176_zh-cn_topic_0237121562_zh-cn_topic_0059777490_t91a6f212010f4503b24d7943aed6d846)中对应设置方法进行设置。
 
 **取值范围：**布尔型
 
@@ -51,7 +51,7 @@
 
 **参数说明：**读取系统表时忽略系统索引（但是修改系统表时依然同时修改索引）。
 
-该参数属于BACKEND类型参数，请参考[表1](../Administration/参数设置.md#zh-cn_topic_0283137176_zh-cn_topic_0237121562_zh-cn_topic_0059777490_t91a6f212010f4503b24d7943aed6d846)中对应设置方法进行设置。
+该参数属于BACKEND类型参数，请参考[表1](重设参数.md#zh-cn_topic_0283137176_zh-cn_topic_0237121562_zh-cn_topic_0059777490_t91a6f212010f4503b24d7943aed6d846)中对应设置方法进行设置。
 
 >![](public_sys-resources/icon-notice.gif) **须知：** 
 >
@@ -68,7 +68,7 @@
 
 **参数说明：**在认证成功后，延迟指定时间，启动服务器连接。允许调试器附加到启动进程上。
 
-该参数属于BACKEND类型参数，请参考[表1](../Administration/参数设置.md#zh-cn_topic_0283137176_zh-cn_topic_0237121562_zh-cn_topic_0059777490_t91a6f212010f4503b24d7943aed6d846)中对应设置方法进行设置。
+该参数属于BACKEND类型参数，请参考[表1](重设参数.md#zh-cn_topic_0283137176_zh-cn_topic_0237121562_zh-cn_topic_0059777490_t91a6f212010f4503b24d7943aed6d846)中对应设置方法进行设置。
 
 **取值范围：**整型，最小值为0，最大值为2147，单位为秒。
 
@@ -82,7 +82,7 @@
 
 **参数说明：**启动服务器连接后，延迟指定时间，进行认证。允许调试器附加到认证过程上。
 
-该参数属于SIGHUP类型参数，请参考[表1](../Administration/参数设置.md#zh-cn_topic_0283137176_zh-cn_topic_0237121562_zh-cn_topic_0059777490_t91a6f212010f4503b24d7943aed6d846)中对应设置方法进行设置。
+该参数属于SIGHUP类型参数，请参考[表1](重设参数.md#zh-cn_topic_0283137176_zh-cn_topic_0237121562_zh-cn_topic_0059777490_t91a6f212010f4503b24d7943aed6d846)中对应设置方法进行设置。
 
 **取值范围：**整型，最小值为0～60，单位为秒。
 
@@ -96,7 +96,7 @@
 
 **参数说明：**为LISTEN和NOTIFY命令生成大量调试输出。[client\_min\_messages](记录日志的时间.md#zh-cn_topic_0283137528_zh-cn_topic_0237124722_zh-cn_topic_0059778452_s2955da1f1cb24b0aa68ddc77700233e0)或[log\_min\_messages](记录日志的时间.md#zh-cn_topic_0283137528_zh-cn_topic_0237124722_zh-cn_topic_0059778452_sc6c47ec8cc1b47e28be98dbb24b1b39a)级别必须是DEBUG1或者更低时，才能把这些输出分别发送到客户端或者服务器日志。
 
-该参数属于USERSET类型参数，请参考[表1](../Administration/参数设置.md#zh-cn_topic_0283137176_zh-cn_topic_0237121562_zh-cn_topic_0059777490_t91a6f212010f4503b24d7943aed6d846)中对应设置方法进行设置。
+该参数属于USERSET类型参数，请参考[表1](重设参数.md#zh-cn_topic_0283137176_zh-cn_topic_0237121562_zh-cn_topic_0059777490_t91a6f212010f4503b24d7943aed6d846)中对应设置方法进行设置。
 
 **取值范围：**布尔型
 
@@ -109,7 +109,7 @@
 
 **参数说明：**启用恢复相关调试输出的日志录，否则将不会被记录。该参数允许覆盖正常设置的[log\_min\_messages](记录日志的时间.md#zh-cn_topic_0283137528_zh-cn_topic_0237124722_zh-cn_topic_0059778452_sc6c47ec8cc1b47e28be98dbb24b1b39a)，但是仅限于特定的消息，这是为了在调试备机中使用。
 
-该参数属于SIGHUP类型参数，请参考[表1](../Administration/参数设置.md#zh-cn_topic_0283137176_zh-cn_topic_0237121562_zh-cn_topic_0059777490_t91a6f212010f4503b24d7943aed6d846)中对应设置方法进行设置。
+该参数属于SIGHUP类型参数，请参考[表1](重设参数.md#zh-cn_topic_0283137176_zh-cn_topic_0237121562_zh-cn_topic_0059777490_t91a6f212010f4503b24d7943aed6d846)中对应设置方法进行设置。
 
 **取值范围：**枚举类型，有效值有debug5、debug4、debug3、debug2、debug1、log，取值的详细信息请参见[log\_min\_messages](记录日志的时间.md#zh-cn_topic_0283137528_zh-cn_topic_0237124722_zh-cn_topic_0059778452_sc6c47ec8cc1b47e28be98dbb24b1b39a)。
 
@@ -124,7 +124,7 @@
 
 **参数说明：**控制是否在日志中打印排序操作中的资源使用相关信息。这个选项只有在编译openGauss的时候定义了TRACE\_SORT宏的时候才可用，不过目前TRACE\_SORT是由缺省定义的。
 
-该参数属于USERSET类型参数，请参考[表1](../Administration/参数设置.md#zh-cn_topic_0283137176_zh-cn_topic_0237121562_zh-cn_topic_0059777490_t91a6f212010f4503b24d7943aed6d846)中对应设置方法进行设置。
+该参数属于USERSET类型参数，请参考[表1](重设参数.md#zh-cn_topic_0283137176_zh-cn_topic_0237121562_zh-cn_topic_0059777490_t91a6f212010f4503b24d7943aed6d846)中对应设置方法进行设置。
 
 **取值范围：**布尔型
 
@@ -137,7 +137,7 @@
 
 **参数说明：**控制检测导致openGauss报告错误的损坏的页头，终止当前事务。
 
-该参数属于SUSET类型参数，请参考[表1](../Administration/参数设置.md#zh-cn_topic_0283137176_zh-cn_topic_0237121562_zh-cn_topic_0059777490_t91a6f212010f4503b24d7943aed6d846)中对应设置方法进行设置。
+该参数属于SUSET类型参数，请参考[表1](重设参数.md#zh-cn_topic_0283137176_zh-cn_topic_0237121562_zh-cn_topic_0059777490_t91a6f212010f4503b24d7943aed6d846)中对应设置方法进行设置。
 
 **取值范围：**布尔型
 
@@ -159,7 +159,7 @@
 
 **参数说明**：异常最大个数，默认值不可更改。
 
-该参数属于USERSET类型参数，请参考[表1](../Administration/参数设置.md#zh-cn_topic_0283137176_zh-cn_topic_0237121562_zh-cn_topic_0059777490_t91a6f212010f4503b24d7943aed6d846)中对应设置方法进行设置。
+该参数属于USERSET类型参数，请参考[表1](重设参数.md#zh-cn_topic_0283137176_zh-cn_topic_0237121562_zh-cn_topic_0059777490_t91a6f212010f4503b24d7943aed6d846)中对应设置方法进行设置。
 
 **取值范围**：整型，当前只能取固定值1000
 
@@ -169,7 +169,7 @@
 
 **参数说明：**标识是否开启Numeric类型数据运算优化。Numeric数据运算是较为耗时的操作之一，通过将Numeric转化为int64/int128类型，提高Numeric运算的性能。
 
-该参数属于SUSET类型参数，请参考[表1](../Administration/参数设置.md#zh-cn_topic_0283137176_zh-cn_topic_0237121562_zh-cn_topic_0059777490_t91a6f212010f4503b24d7943aed6d846)中对应设置方法进行设置。
+该参数属于SUSET类型参数，请参考[表1](重设参数.md#zh-cn_topic_0283137176_zh-cn_topic_0237121562_zh-cn_topic_0059777490_t91a6f212010f4503b24d7943aed6d846)中对应设置方法进行设置。
 
 **取值范围：**布尔型
 
@@ -182,7 +182,7 @@
 
 **参数说明：**标识是否开启下盘压缩功能。
 
-该参数属于USERSET类型参数，请参考[表1](../Administration/参数设置.md#zh-cn_topic_0283137176_zh-cn_topic_0237121562_zh-cn_topic_0059777490_t91a6f212010f4503b24d7943aed6d846)中对应设置方法进行设置。
+该参数属于USERSET类型参数，请参考[表1](重设参数.md#zh-cn_topic_0283137176_zh-cn_topic_0237121562_zh-cn_topic_0059777490_t91a6f212010f4503b24d7943aed6d846)中对应设置方法进行设置。
 
 **取值范围：**布尔型
 
@@ -195,7 +195,7 @@
 
 **参数说明**：控制自诊断的日志级别。目前仅对多列统计信息进行控制。
 
-该参数属于USERSET类型参数，请参考[表1](../Administration/参数设置.md#zh-cn_topic_0283137176_zh-cn_topic_0237121562_zh-cn_topic_0059777490_t91a6f212010f4503b24d7943aed6d846)中对应设置方法进行设置。
+该参数属于USERSET类型参数，请参考[表1](重设参数.md#zh-cn_topic_0283137176_zh-cn_topic_0237121562_zh-cn_topic_0059777490_t91a6f212010f4503b24d7943aed6d846)中对应设置方法进行设置。
 
 **取值范围：**字符串
 
@@ -210,7 +210,7 @@
 
 **参数说明**：评估信息一般用于运维人员在维护工作中使用，因此该参数默认关闭，此外为了避免这些信息干扰正常的explain信息显示，只有在explain命令的verbose选项打开的情况下才显示评估信息
 
-该参数属于USERSET类型参数，请参考[表1](../Administration/参数设置.md#zh-cn_topic_0283137176_zh-cn_topic_0237121562_zh-cn_topic_0059777490_t91a6f212010f4503b24d7943aed6d846)中对应设置方法进行设置。
+该参数属于USERSET类型参数，请参考[表1](重设参数.md#zh-cn_topic_0283137176_zh-cn_topic_0237121562_zh-cn_topic_0059777490_t91a6f212010f4503b24d7943aed6d846)中对应设置方法进行设置。
 
 **取值范围**：布尔型
 
@@ -228,7 +228,7 @@
 
 **参数说明**：控制是否允许通过JDBC、ODBC、Libpq等接口批量绑定和执行PBE形式的语句。
 
-该参数属于SIGHUP类型参数，请参考[表1](../Administration/参数设置.md#zh-cn_topic_0283137176_zh-cn_topic_0237121562_zh-cn_topic_0059777490_t91a6f212010f4503b24d7943aed6d846)中对应设置方法进行设置。
+该参数属于SIGHUP类型参数，请参考[表1](重设参数.md#zh-cn_topic_0283137176_zh-cn_topic_0237121562_zh-cn_topic_0059777490_t91a6f212010f4503b24d7943aed6d846)中对应设置方法进行设置。
 
 **取值范围**：布尔型
 
@@ -241,7 +241,7 @@
 
 **参数说明**：用于控制部分共享数据和线程在NUMA节点间分布的属性。用于大型多NUMA节点的ARM服务器性能调优，一般不用设置。
 
-该参数属于POSTMASTER类型参数，请参考[表1](../Administration/参数设置.md#zh-cn_topic_0283137176_zh-cn_topic_0237121562_zh-cn_topic_0059777490_t91a6f212010f4503b24d7943aed6d846)中对应设置方法进行设置。
+该参数属于POSTMASTER类型参数，请参考[表1](重设参数.md#zh-cn_topic_0283137176_zh-cn_topic_0237121562_zh-cn_topic_0059777490_t91a6f212010f4503b24d7943aed6d846)中对应设置方法进行设置。
 
 **取值范围**：字符串，当前有效取值为'none', 'all'。
 
@@ -258,7 +258,7 @@
 
 **参数说明**：设置用于增量检查点打开后，显示线程的刷页信息以及增量检查点的详细信息，信息比较多，不建议设置为true。
 
-该参数属于SIGHUP类型参数，请参考[表1](../Administration/参数设置.md#zh-cn_topic_0283137176_zh-cn_topic_0237121562_zh-cn_topic_0059777490_t91a6f212010f4503b24d7943aed6d846)中对应设置方法进行设置。
+该参数属于SIGHUP类型参数，请参考[表1](重设参数.md#zh-cn_topic_0283137176_zh-cn_topic_0237121562_zh-cn_topic_0059777490_t91a6f212010f4503b24d7943aed6d846)中对应设置方法进行设置。
 
 **取值范围**：布尔型
 
@@ -268,7 +268,7 @@
 
 **参数说明**：用于控制在后台周期性地提前初始化xlog文件的数目。该参数是为了避免事务提交时执行xlog文件初始化影响性能，但仅在超重负载时才可能出现，因此一般不用配置。
 
-该参数属于POSTMASTER类型参数，请参考[表1](../Administration/参数设置.md#zh-cn_topic_0283137176_zh-cn_topic_0237121562_zh-cn_topic_0059777490_t91a6f212010f4503b24d7943aed6d846)中对应设置方法进行设置。
+该参数属于POSTMASTER类型参数，请参考[表1](重设参数.md#zh-cn_topic_0283137176_zh-cn_topic_0237121562_zh-cn_topic_0059777490_t91a6f212010f4503b24d7943aed6d846)中对应设置方法进行设置。
 
 **取值范围**：整型，0\~1000000（0表示不提前初始化）。例如，取值10，表示后台线程会周期性地根据当前xlog写入位置提前初始化10个xlog文件。
 
@@ -278,7 +278,7 @@
 
 **参数说明**：在enable\_opfusion参数打开的状态下，如果开启该参数，可以支持TPCC中出现的聚集函数，排序两类SQL语句的加速执行，提升SQL执行性能。
 
-该参数属于USERSET类型参数，请参考[表1](../Administration/参数设置.md#zh-cn_topic_0283137176_zh-cn_topic_0237121562_zh-cn_topic_0059777490_t91a6f212010f4503b24d7943aed6d846)中对应设置方法进行设置。
+该参数属于USERSET类型参数，请参考[表1](重设参数.md#zh-cn_topic_0283137176_zh-cn_topic_0237121562_zh-cn_topic_0059777490_t91a6f212010f4503b24d7943aed6d846)中对应设置方法进行设置。
 
 **取值范围**：布尔型
 
@@ -291,7 +291,7 @@
 
 **参数说明**：进行查询时，是否要将过滤条件下推，进行Rough Check。
 
-该参数属于SUSET类型参数，请参考[表1](../Administration/参数设置.md#zh-cn_topic_0283137176_zh-cn_topic_0237121562_zh-cn_topic_0059777490_t91a6f212010f4503b24d7943aed6d846)中对应设置方法进行设置。
+该参数属于SUSET类型参数，请参考[表1](重设参数.md#zh-cn_topic_0283137176_zh-cn_topic_0237121562_zh-cn_topic_0059777490_t91a6f212010f4503b24d7943aed6d846)中对应设置方法进行设置。
 
 **取值范围**：布尔型
 
@@ -304,7 +304,7 @@
 
 **参数说明：**该参数用来说明char类型和varchar/text类型的hash值计算方式是否相同，以此来判断进行分布列从char类型到相同值的varchar/text类型转换，数据分布变化时，是否需要进行重分布。
 
-该参数属于POSTMASTER类型参数，请参考[表1](../Administration/参数设置.md#zh-cn_topic_0283137176_zh-cn_topic_0237121562_zh-cn_topic_0059777490_t91a6f212010f4503b24d7943aed6d846)中对应设置方法进行设置。
+该参数属于POSTMASTER类型参数，请参考[表1](重设参数.md#zh-cn_topic_0283137176_zh-cn_topic_0237121562_zh-cn_topic_0059777490_t91a6f212010f4503b24d7943aed6d846)中对应设置方法进行设置。
 
 **取值范围**：布尔型
 
@@ -321,7 +321,7 @@
 
 **参数说明：**该参数用来控制pldebugger server端等待debug端响应的超时时间。
 
-该参数属于USERSET类型参数，请参考[表1](../Administration/参数设置.md#zh-cn_topic_0283137176_zh-cn_topic_0237121562_zh-cn_topic_0059777490_t91a6f212010f4503b24d7943aed6d846)中对应设置方法进行设置。
+该参数属于USERSET类型参数，请参考[表1](重设参数.md#zh-cn_topic_0283137176_zh-cn_topic_0237121562_zh-cn_topic_0059777490_t91a6f212010f4503b24d7943aed6d846)中对应设置方法进行设置。
 
 **取值范围**：整型，1 \~ 86400，单位为秒。
 
@@ -329,208 +329,223 @@
 
 ## plsql\_show\_all\_error<a name="section232164414549"></a>
 
-**参数说明：**该参数用来控制编译PLPGSQL对象时是否支持跳过报错继续编译，具体影响请参考[DBE\_PLDEVELOPER](../SQLReference/DBE_PLDEVELOPER.md)内的说明。
+**参数说明：**该参数用来控制编译PLPGSQL对象时是否支持跳过报错继续编译，具体影响请参考[DBE\_PLDEVELOPER](DBE_PLDEVELOPER.md)内的说明。
 
-该参数属于USERSET类型参数，请参考[表1](../Administration/参数设置.md#zh-cn_topic_0283137176_zh-cn_topic_0237121562_zh-cn_topic_0059777490_t91a6f212010f4503b24d7943aed6d846)中对应设置方法进行设置。
+该参数属于USERSET类型参数，请参考[表1](重设参数.md#zh-cn_topic_0283137176_zh-cn_topic_0237121562_zh-cn_topic_0059777490_t91a6f212010f4503b24d7943aed6d846)中对应设置方法进行设置。
 
 **取值范围**：布尔型
 
 **默认值**：off
 
-
-
 ## ustore\_attr<a name="section153256259274"></a>
 
 **参数说明：**该参数主要用来控制USTORE存储引擎表的信息统计，回滚类型，重点模块\(包括数据、索引、回滚段、回放等\)运行时数据的校验，主要用于协助研发问题定位。
 
-该参数属于USERSET类型参数，请参考[表1](../Administration/参数设置.md#zh-cn_topic_0283137176_zh-cn_topic_0237121562_zh-cn_topic_0059777490_t91a6f212010f4503b24d7943aed6d846)中对应设置方法进行设置。
+该参数属于USERSET类型参数，请参考[表1](zh-cn_topic_0289899927.md#zh-cn_topic_0283137176_zh-cn_topic_0237121562_zh-cn_topic_0059777490_t91a6f212010f4503b24d7943aed6d846)中对应设置方法进行设置。
 
-**取值范围**：字符串，该参数值的设置方式采用key-value模式，key和value取值对应关系和说明如下。如果是多个key-value组合设置，中间使用";"作为分隔符，例如
+**取值范围**：字符串，该参数值的设置方式采用key-value模式，key和value取值对应关系和说明如下。如果是多个key-value组合设置，中间使用";"作为分隔符，例如：
 
-ustore\_attr='ustore\_verify\_level=NORMAL;ustore\_verify\_module=UPAGE:UBTREE:UNDO:REDO'。
+ustore\_attr='ustore\_verify\_level=FAST;ustore\_verify\_module=UPAGE:UBTREE:UNDO:REDO'。
 
->![](C:/Users/Administrator/Desktop/docs-3.0.0/docs-3.0.0/content/docs-lite/zh/docs/Developerguide/public_sys-resources/icon-note.gif) **说明：** 
->ustore\_attr设置参数值时，key和value之间的"="前后不要有空格或者其他字符，例如ustore\_attr='ustore\_verify\_level = NORMAL;，内核代码校验会发现参数不合法，导致参数设置失败。
+>![](C:/Users/liyang/Desktop/openGauss/docs/content/zh/docs/Developerguide/public_sys-resources/icon-note.gif) **说明：** 
+>ustore\_attr设置参数值时，key和value之间的"="前后不要有空格或者其他字符，例如ustore\_attr='ustore\_verify\_level =  FAST;，内核代码校验会发现参数不合法，导致参数设置失败。
 
-- ustore\_verify\_level：控制校验的级别
+- ustore\_verify\_level：控制校验的级别。
 
-  **取值范围**：字符串，见下述表格详细描述
+  **取值范围**：字符串，取值不区分大小写，见下述表格详细描述。
 
-  **表1**  ustore\_verify\_level取值含义说明
+  **表 1**  ustore\_verify\_level取值含义说明
 
   <a name="table13727347390"></a>
 
-  <table><tbody><tr id="row207313415394"><td class="cellrowborder" valign="top" width="21.85%"><p id="p07343483912"><a name="p07343483912"></a><a name="p07343483912"></a>参数取值</p>
+  <table><thead align="left"><tr id="row207313415394"><th class="cellrowborder" valign="top" width="21.85%" id="mcps1.2.3.1.1"><p id="p07343483912"><a name="p07343483912"></a><a name="p07343483912"></a>参数取值</p>
+  </th>
+  <th class="cellrowborder" valign="top" width="78.14999999999999%" id="mcps1.2.3.1.2"><p id="p67353463915"><a name="p67353463915"></a><a name="p67353463915"></a>含义</p>
+  </th>
+  </tr>
+  </thead>
+  <tbody><tr id="row2858193215515"><td class="cellrowborder" valign="top" width="21.85%" headers="mcps1.2.3.1.1 "><p id="p118594329551"><a name="p118594329551"></a><a name="p118594329551"></a><span id="ph898383425514"><a name="ph898383425514"></a><a name="ph898383425514"></a>NONE</span></p>
   </td>
-  <td class="cellrowborder" valign="top" width="78.14999999999999%"><p id="p67353463915"><a name="p67353463915"></a><a name="p67353463915"></a>含义</p>
+  <td class="cellrowborder" valign="top" width="78.14999999999999%" headers="mcps1.2.3.1.2 "><p id="p2859232135517"><a name="p2859232135517"></a><a name="p2859232135517"></a><span id="ph115771837105513"><a name="ph115771837105513"></a><a name="ph115771837105513"></a>NONE表示关闭校验，性能测试场景下推荐开启</span></p>
   </td>
   </tr>
-  <tr id="row1731334143911"><td class="cellrowborder" valign="top" width="21.85%"><p id="p1173123463918"><a name="p1173123463918"></a><a name="p1173123463918"></a>FAST</p>
+  <tr id="row1731334143911"><td class="cellrowborder" valign="top" width="21.85%" headers="mcps1.2.3.1.1 "><p id="p1173123463918"><a name="p1173123463918"></a><a name="p1173123463918"></a>FAST</p>
   </td>
-  <td class="cellrowborder" valign="top" width="78.14999999999999%"><p id="p57316341391"><a name="p57316341391"></a><a name="p57316341391"></a>FAST表示快速校验，校验内容少，性能影响最小。</p>
-  </td>
-  </tr>
-  <tr id="row1673123453910"><td class="cellrowborder" valign="top" width="21.85%"><p id="p1873173415399"><a name="p1873173415399"></a><a name="p1873173415399"></a>NORMAL</p>
-  </td>
-  <td class="cellrowborder" valign="top" width="78.14999999999999%"><p id="p10242379409"><a name="p10242379409"></a><a name="p10242379409"></a>NORMAL表示正常校验，校验内容相比快速校验增多，性能影响中等。</p>
+  <td class="cellrowborder" valign="top" width="78.14999999999999%" headers="mcps1.2.3.1.2 "><p id="p57316341391"><a name="p57316341391"></a><a name="p57316341391"></a>FAST表示快速校验，校验内容少，性能影响最小</p>
   </td>
   </tr>
-  <tr id="row10740349394"><td class="cellrowborder" valign="top" width="21.85%"><p id="p474203416395"><a name="p474203416395"></a><a name="p474203416395"></a>SLOW</p>
+  <tr id="row10740349394"><td class="cellrowborder" valign="top" width="21.85%" headers="mcps1.2.3.1.1 "><p id="p474203416395"><a name="p474203416395"></a><a name="p474203416395"></a><span id="ph6427101155517"><a name="ph6427101155517"></a><a name="ph6427101155517"></a>COMPLETE</span></p>
   </td>
-  <td class="cellrowborder" valign="top" width="78.14999999999999%"><p id="p27413341393"><a name="p27413341393"></a><a name="p27413341393"></a>SLOW表示慢速校验，校验内容最多，性能影响比较大。</p>
+  <td class="cellrowborder" valign="top" width="78.14999999999999%" headers="mcps1.2.3.1.2 "><p id="p27413341393"><a name="p27413341393"></a><a name="p27413341393"></a><span id="ph1295610916557"><a name="ph1295610916557"></a><a name="ph1295610916557"></a>COMPLETE</span>表示<span id="ph1584051914557"><a name="ph1584051914557"></a><a name="ph1584051914557"></a>全量</span>校验，校验内容最多，性能影响比较大</p>
   </td>
   </tr>
   </tbody>
   </table>
 
 
-  **默认值**：空字符串
+  **默认值**：FAST
 
-- ustore\_verify\_module：控制校验的模块
+- ustore\_verify\_module：控制校验的模块。
 
   **取值范围**：字符串，设置值UPAGE，UBTREE，UNDO, REDO中的一个或者多个，或者单独设置ALL或者NULL\(不区分大小写\)。当设置
 
   UPAGE，UBTREE，UNDO，REDO中的多个值时，使用":"作为连接符。例如ustore\_verify\_module=UPAGE:UBTREE:UNDO:REDO。
 
-  **表2**  ustore\_verify\_module取值含义说明
+  **表 2**  ustore\_verify\_module取值含义说明
 
   <a name="table6278239174318"></a>
 
-  <table><tbody><tr id="row227993920432"><td class="cellrowborder" valign="top" width="21.85%"><p id="p327933984314"><a name="p327933984314"></a><a name="p327933984314"></a>参数取值</p>
+  <table><thead align="left"><tr id="row227993920432"><th class="cellrowborder" valign="top" width="21.85%" id="mcps1.2.3.1.1"><p id="p327933984314"><a name="p327933984314"></a><a name="p327933984314"></a>参数取值</p>
+  </th>
+  <th class="cellrowborder" valign="top" width="78.14999999999999%" id="mcps1.2.3.1.2"><p id="p1627911394436"><a name="p1627911394436"></a><a name="p1627911394436"></a>含义</p>
+  </th>
+  </tr>
+  </thead>
+  <tbody><tr id="row5279203914435"><td class="cellrowborder" valign="top" width="21.85%" headers="mcps1.2.3.1.1 "><p id="p14159450194316"><a name="p14159450194316"></a><a name="p14159450194316"></a>UPAGE</p>
   </td>
-  <td class="cellrowborder" valign="top" width="78.14999999999999%"><p id="p1627911394436"><a name="p1627911394436"></a><a name="p1627911394436"></a>含义</p>
+  <td class="cellrowborder" valign="top" width="78.14999999999999%" headers="mcps1.2.3.1.2 "><p id="p415835019430"><a name="p415835019430"></a><a name="p415835019430"></a>表示开启数据页面校验。</p>
   </td>
   </tr>
-  <tr id="row5279203914435"><td class="cellrowborder" valign="top" width="21.85%"><p id="p14159450194316"><a name="p14159450194316"></a><a name="p14159450194316"></a>UPAGE</p>
+  <tr id="row1827911397436"><td class="cellrowborder" valign="top" width="21.85%" headers="mcps1.2.3.1.1 "><p id="p161571950194316"><a name="p161571950194316"></a><a name="p161571950194316"></a>UBTREE</p>
   </td>
-  <td class="cellrowborder" valign="top" width="78.14999999999999%"><p id="p415835019430"><a name="p415835019430"></a><a name="p415835019430"></a>表示开启数据页面校验</p>
-  </td>
-  </tr>
-  <tr id="row1827911397436"><td class="cellrowborder" valign="top" width="21.85%"><p id="p161571950194316"><a name="p161571950194316"></a><a name="p161571950194316"></a>UBTREE</p>
-  </td>
-  <td class="cellrowborder" valign="top" width="78.14999999999999%"><p id="p9156205034311"><a name="p9156205034311"></a><a name="p9156205034311"></a>表示开启UBTREE索引校验</p>
+  <td class="cellrowborder" valign="top" width="78.14999999999999%" headers="mcps1.2.3.1.2 "><p id="p9156205034311"><a name="p9156205034311"></a><a name="p9156205034311"></a>表示开启UBTREE索引校验。</p>
   </td>
   </tr>
-  <tr id="row20279103915439"><td class="cellrowborder" valign="top" width="21.85%"><p id="p215585017431"><a name="p215585017431"></a><a name="p215585017431"></a>UNDO</p>
+  <tr id="row20279103915439"><td class="cellrowborder" valign="top" width="21.85%" headers="mcps1.2.3.1.1 "><p id="p215585017431"><a name="p215585017431"></a><a name="p215585017431"></a>UNDO</p>
   </td>
-  <td class="cellrowborder" valign="top" width="78.14999999999999%"><p id="p1712285012436"><a name="p1712285012436"></a><a name="p1712285012436"></a>表示开启回滚段数据校验</p>
-  </td>
-  </tr>
-  <tr id="row1354695884318"><td class="cellrowborder" valign="top" width="21.85%"><p id="p25461058164318"><a name="p25461058164318"></a><a name="p25461058164318"></a>REDO</p>
-  </td>
-  <td class="cellrowborder" valign="top" width="78.14999999999999%"><p id="p1454615884315"><a name="p1454615884315"></a><a name="p1454615884315"></a>表示开启REDO流程的数据页面校验</p>
+  <td class="cellrowborder" valign="top" width="78.14999999999999%" headers="mcps1.2.3.1.2 "><p id="p1712285012436"><a name="p1712285012436"></a><a name="p1712285012436"></a>表示开启回滚段数据校验。</p>
   </td>
   </tr>
-  <tr id="row135461558164316"><td class="cellrowborder" valign="top" width="21.85%"><p id="p125461358114319"><a name="p125461358114319"></a><a name="p125461358114319"></a>ALL</p>
+  <tr id="row1354695884318"><td class="cellrowborder" valign="top" width="21.85%" headers="mcps1.2.3.1.1 "><p id="p25461058164318"><a name="p25461058164318"></a><a name="p25461058164318"></a>REDO</p>
   </td>
-  <td class="cellrowborder" valign="top" width="78.14999999999999%"><p id="p054695864320"><a name="p054695864320"></a><a name="p054695864320"></a>表示同时开启UPAGE，UBTREE，UNDO，REDO模块数据的校验</p>
+  <td class="cellrowborder" valign="top" width="78.14999999999999%" headers="mcps1.2.3.1.2 "><p id="p1454615884315"><a name="p1454615884315"></a><a name="p1454615884315"></a>表示开启REDO流程的数据页面校验。</p>
   </td>
   </tr>
-  <tr id="row786103544612"><td class="cellrowborder" valign="top" width="21.85%"><p id="p38743564613"><a name="p38743564613"></a><a name="p38743564613"></a>NULL</p>
+  <tr id="row135461558164316"><td class="cellrowborder" valign="top" width="21.85%" headers="mcps1.2.3.1.1 "><p id="p125461358114319"><a name="p125461358114319"></a><a name="p125461358114319"></a>ROACH</p>
   </td>
-  <td class="cellrowborder" valign="top" width="78.14999999999999%"><p id="p987103520466"><a name="p987103520466"></a><a name="p987103520466"></a>表示同时关闭UPAGE，UBTREE，UNDO，REDO模块数据的校验</p>
+  <td class="cellrowborder" valign="top" width="78.14999999999999%" headers="mcps1.2.3.1.2 "><p id="p054695864320"><a name="p054695864320"></a><a name="p054695864320"></a>表示开启ROACH备份的数据页面校验。</p>
+  </td>
+  </tr>
+  <tr id="row135461558164316"><td class="cellrowborder" valign="top" width="21.85%" headers="mcps1.2.3.1.1 "><p id="p125461358114319"><a name="p125461358114319"></a><a name="p125461358114319"></a>ALL</p>
+  </td>
+  <td class="cellrowborder" valign="top" width="78.14999999999999%" headers="mcps1.2.3.1.2 "><p id="p054695864320"><a name="p054695864320"></a><a name="p054695864320"></a>表示同时开启UPAGE，UBTREE，UNDO，REDO模块数据的校验。</p>
+  </td>
+  </tr>
+  <tr id="row786103544612"><td class="cellrowborder" valign="top" width="21.85%" headers="mcps1.2.3.1.1 "><p id="p38743564613"><a name="p38743564613"></a><a name="p38743564613"></a>NULL</p>
+  </td>
+  <td class="cellrowborder" valign="top" width="78.14999999999999%" headers="mcps1.2.3.1.2 "><p id="p987103520466"><a name="p987103520466"></a><a name="p987103520466"></a>表示同时关闭UPAGE，UBTREE，UNDO，REDO模块数据的校验。</p>
   </td>
   </tr>
   </tbody>
   </table>
 
 
-  **默认值**：空字符串
+  **默认值**： UPAGE:UBTREE:UNDO
 
-- index\_trace\_level：控制开启索引追踪并控制打印级别，开启后在索引扫描的过程中，会根据不同的打印级别对符合条件的索引元组的信息进行打印
+- index\_trace\_level：控制开启索引追踪并控制打印级别，开启后在索引扫描的过程中，会根据不同的打印级别对符合条件的索引元组的信息进行打印。
 
-  **取值范围**：字符串，取值见表格描述
+  **取值范围**：字符串，取值下表格描述。
 
   **默认值**：NO
 
-  **表3**  index\_trace\_level取值含义说明
+  **表 3**  index\_trace\_level取值含义说明
 
   <a name="table550726182513"></a>
 
-  <table><tbody><tr id="row35611060258"><td class="cellrowborder" valign="top" width="21.85%"><p id="p115618612511"><a name="p115618612511"></a><a name="p115618612511"></a>参数取值</p>
+  <table><thead align="left"><tr id="row35611060258"><th class="cellrowborder" valign="top" width="21.85%" id="mcps1.2.3.1.1"><p id="p115618612511"><a name="p115618612511"></a><a name="p115618612511"></a>参数取值</p>
+  </th>
+  <th class="cellrowborder" valign="top" width="78.14999999999999%" id="mcps1.2.3.1.2"><p id="p256110682516"><a name="p256110682516"></a><a name="p256110682516"></a>含义</p>
+  </th>
+  </tr>
+  </thead>
+  <tbody><tr id="row456111622515"><td class="cellrowborder" valign="top" width="21.85%" headers="mcps1.2.3.1.1 "><p id="p55612610252"><a name="p55612610252"></a><a name="p55612610252"></a>NO</p>
   </td>
-  <td class="cellrowborder" valign="top" width="78.14999999999999%"><p id="p256110682516"><a name="p256110682516"></a><a name="p256110682516"></a>含义</p>
+  <td class="cellrowborder" valign="top" width="78.14999999999999%" headers="mcps1.2.3.1.2 "><p id="p10561136192519"><a name="p10561136192519"></a><a name="p10561136192519"></a>不打印任何额外信息。</p>
   </td>
   </tr>
-  <tr id="row456111622515"><td class="cellrowborder" valign="top" width="21.85%"><p id="p55612610252"><a name="p55612610252"></a><a name="p55612610252"></a>NO</p>
+  <tr id="row135617612515"><td class="cellrowborder" valign="top" width="21.85%" headers="mcps1.2.3.1.1 "><p id="p05610662513"><a name="p05610662513"></a><a name="p05610662513"></a>NORMAL</p>
   </td>
-  <td class="cellrowborder" valign="top" width="78.14999999999999%"><p id="p10561136192519"><a name="p10561136192519"></a><a name="p10561136192519"></a>不打印任何额外信息。</p>
-  </td>
-  </tr>
-  <tr id="row135617612515"><td class="cellrowborder" valign="top" width="21.85%"><p id="p05610662513"><a name="p05610662513"></a><a name="p05610662513"></a>NORMAL</p>
-  </td>
-  <td class="cellrowborder" valign="top" width="78.14999999999999%"><p id="p45617612256"><a name="p45617612256"></a><a name="p45617612256"></a>打印<strong id="b16561136122514"><a name="b16561136122514"></a><a name="b16561136122514"></a>可见索引元组</strong>相关信息，包括：</p>
-  <a name="ul756112672518"></a><a name="ul756112672518"></a><ul id="ul756112672518"><li>当前索引元组所在索引页面号以及偏移；</li><li>当前元组状态；</li><li>当前元组对应的TID以及partOid；</li><li>当前元组对应的xmin和xmax信息；</li><li>当前元组内容（如果开启  enable_log_tuple）；</li></ul>
+  <td class="cellrowborder" valign="top" width="78.14999999999999%" headers="mcps1.2.3.1.2 "><div class="p" id="p45617612256"><a name="p45617612256"></a><a name="p45617612256"></a>打印<strong id="b16561136122514"><a name="b16561136122514"></a><a name="b16561136122514"></a>可见索引元组</strong>相关信息，包括：<a name="ul756112672518"></a><a name="ul756112672518"></a><ul id="ul756112672518"><li>当前索引元组所在索引页面号以及偏移。</li><li>当前元组状态。</li><li>当前元组对应的TID以及partOid。</li><li>当前元组对应的xmin和xmax信息。</li><li>当前元组内容（如果开启enable_log_tuple）。</li></ul>
+  </div>
   </td>
   </tr>
-  <tr id="row1656116620254"><td class="cellrowborder" valign="top" width="21.85%"><p id="p14561765259"><a name="p14561765259"></a><a name="p14561765259"></a>VISIBILITY</p>
+  <tr id="row1656116620254"><td class="cellrowborder" valign="top" width="21.85%" headers="mcps1.2.3.1.1 "><p id="p14561765259"><a name="p14561765259"></a><a name="p14561765259"></a>VISIBILITY</p>
   </td>
-  <td class="cellrowborder" valign="top" width="78.14999999999999%"><p id="p456106162517"><a name="p456106162517"></a><a name="p456106162517"></a>在 NORMAL 的基础上，额外打印没有通过可见性检查的索引元组的信息，并标明是否可见。</p>
-  </td>
-  </tr>
-  <tr id="row956113618259"><td class="cellrowborder" valign="top" width="21.85%"><p id="p17561761253"><a name="p17561761253"></a><a name="p17561761253"></a>SHOWHIKEY</p>
-  </td>
-  <td class="cellrowborder" valign="top" width="78.14999999999999%"><p id="p14561176132516"><a name="p14561176132516"></a><a name="p14561176132516"></a>在 VISIBILITY 的基础上，尝试打印页面上 HIKEY 元组的信息。</p>
+  <td class="cellrowborder" valign="top" width="78.14999999999999%" headers="mcps1.2.3.1.2 "><p id="p456106162517"><a name="p456106162517"></a><a name="p456106162517"></a>在NORMAL的基础上，额外打印没有通过可见性检查的索引元组的信息，并标明是否可见。</p>
   </td>
   </tr>
-  <tr id="row25616642518"><td class="cellrowborder" valign="top" width="21.85%"><p id="p1056118619254"><a name="p1056118619254"></a><a name="p1056118619254"></a>ALL</p>
+  <tr id="row956113618259"><td class="cellrowborder" valign="top" width="21.85%" headers="mcps1.2.3.1.1 "><p id="p17561761253"><a name="p17561761253"></a><a name="p17561761253"></a>SHOWHIKEY</p>
   </td>
-  <td class="cellrowborder" valign="top" width="78.14999999999999%"><p id="p9561466250"><a name="p9561466250"></a><a name="p9561466250"></a>打印扫描的索引页面上所有元组的相关信息。</p>
+  <td class="cellrowborder" valign="top" width="78.14999999999999%" headers="mcps1.2.3.1.2 "><p id="p14561176132516"><a name="p14561176132516"></a><a name="p14561176132516"></a>在VISIBILITY的基础上，尝试打印页面上HIKEY元组的信息。</p>
+  </td>
+  </tr>
+  <tr id="row25616642518"><td class="cellrowborder" valign="top" width="21.85%" headers="mcps1.2.3.1.1 "><p id="p1056118619254"><a name="p1056118619254"></a><a name="p1056118619254"></a>ALL</p>
+  </td>
+  <td class="cellrowborder" valign="top" width="78.14999999999999%" headers="mcps1.2.3.1.2 "><p id="p9561466250"><a name="p9561466250"></a><a name="p9561466250"></a>打印扫描的索引页面上所有元组的相关信息。</p>
   </td>
   </tr>
   </tbody>
   </table>
 
-- enable\_log\_tuple：打印日志级提示信息时，是否允许同时将相关元组的内容打印出来，以便进行问题排查和定位
+- enable\_log\_tuple：打印日志级提示信息时，是否允许同时将相关元组的内容打印出来，以便进行问题排查和定位。
 
-  **取值范围**：on或者off（不区分大小写）
+  取值范围：on或者off（不区分大小写）
 
-  **默认值**：off
+  默认值：off
 
-- enable\_ustore\_sync\_rollback：控制USTORE表是否开启同步回滚
+  备注：该参数已弃用
 
-  **取值范围**：布尔值
-
-  **默认值**：true
-
-- enable\_ustore\_async\_rollback：控制USTORE表是否开启异步回滚
+- enable\_ustore\_sync\_rollback：控制USTORE表是否开启同步回滚。
 
   **取值范围**：布尔值
 
   **默认值**：true
 
-- enable\_ustore\_page\_rollback：控制USTORE表是否开启页面回滚
+- enable\_ustore\_async\_rollback：控制USTORE表是否开启异步回滚。
 
   **取值范围**：布尔值
 
   **默认值**：true
 
-- enable\_ustore\_partial\_seqscan：是否允许USTORE表开启部分扫描
+- enable\_ustore\_page\_rollback：控制USTORE表是否开启页面回滚。
+
+  **取值范围**：布尔值
+
+  **默认值**：true
+
+- enable\_ustore\_partial\_seqscan：是否允许USTORE表开启部分扫描。
 
   **取值范围**：布尔值
 
   **默认值**：false
 
-- enable\_candidate\_buf\_usage\_count：是否开启缓存区使用计数统计
+- enable\_candidate\_buf\_usage\_count：是否开启缓存区使用计数统计。
 
   **取值范围**：布尔值
 
   **默认值**：false
 
-- ustats\_tracker\_naptime：控制USTORE表统计信息周期
+- ustats\_tracker\_naptime：控制USTORE表统计信息周期。
 
   **取值范围**：1\~INT\_MAX/1000
 
   **默认值**：20, 单位\(秒\)
 
-- umax\_search\_length\_for\_prune：控制USTORE表prune操作搜索的最大深度
+- umax\_search\_length\_for\_prune：控制USTORE表prune操作搜索的最大深度。
 
   **取值范围**：1\~INT\_MAX/1000
 
   **默认值**：10，单次\(次\)
 
+- ustore\_unit\_test：研发白盒测试指定测试参数
+
+  **取值范围**：字符串
+
+  **默认值**：空
 
 **默认值**：空字符串
 
->![](C:/Users/Administrator/Desktop/docs-3.0.0/docs-3.0.0/content/docs-lite/zh/docs/Developerguide/public_sys-resources/icon-note.gif) **说明：** 
->该参数只适用于集中式或者openGauss单机上的USTORE存储引擎表。
+>![](C:/Users/liyang/Desktop/openGauss/docs/content/zh/docs/Developerguide/public_sys-resources/icon-caution.gif) **注意：** 
+>
+>+ ustore\_attr参数设置请慎重，建议在工程师协助下修改。
+>+ 该参数只适用于集中式或者openGauss单机上的USTORE存储引擎表。
