--- a/content/docs-lite/zh/docs/DataBaseReference/线程池.md
+++ b/content/docs-lite/zh/docs/DataBaseReference/线程池.md
@@ -2,7 +2,7 @@
 
 ## enable\_thread\_pool<a name="zh-cn_topic_0283137548_zh-cn_topic_0237124743_section97160555612"></a>
 
-**参数说明**：控制是否使用线程池功能。该参数属于POSTMASTER类型参数，请参考[表1](../Administration/参数设置.md#zh-cn_topic_0283137176_zh-cn_topic_0237121562_zh-cn_topic_0059777490_t91a6f212010f4503b24d7943aed6d846)中对应设置方法进行设置。
+**参数说明**：控制是否使用线程池功能。该参数属于POSTMASTER类型参数，请参考[表1](重设参数.md#zh-cn_topic_0283137176_zh-cn_topic_0237121562_zh-cn_topic_0059777490_t91a6f212010f4503b24d7943aed6d846)中对应设置方法进行设置。
 
 **取值范围**：布尔型
 
@@ -15,7 +15,7 @@
 
 ## thread\_pool\_attr<a name="zh-cn_topic_0283137548_zh-cn_topic_0237124743_section787511112134"></a>
 
-**参数说明**：用于控制线程池功能的详细属性，该参数仅在enable\_thread\_pool打开后生效，仅sysadmin用户可以访问。该参数属于POSTMASTER类型参数，请参考[表1](../Administration/参数设置.md#zh-cn_topic_0283137176_zh-cn_topic_0237121562_zh-cn_topic_0059777490_t91a6f212010f4503b24d7943aed6d846)中对应设置方法进行设置。
+**参数说明**：用于控制线程池功能的详细属性，该参数仅在enable\_thread\_pool打开后生效，仅sysadmin用户可以访问。该参数属于POSTMASTER类型参数，请参考[表1](重设参数.md#zh-cn_topic_0283137176_zh-cn_topic_0237121562_zh-cn_topic_0059777490_t91a6f212010f4503b24d7943aed6d846)中对应设置方法进行设置。
 
 **取值范围**：字符串，长度大于0
 
@@ -29,7 +29,7 @@
 
 ##  thread_pool_stream_attr
 
-**参数说明：**用于控制stream线程池功能的详细属性，stream线程只在DN生效，该参数仅在enable_thread_pool打开后生效，仅sysadmin用户可以访问。该参数属于POSTMASTER类型参数，请参考[表1](../Administration/参数设置.md#zh-cn_topic_0283137176_zh-cn_topic_0237121562_zh-cn_topic_0059777490_t91a6f212010f4503b24d7943aed6d846)中对应设置方法进行设置。
+**参数说明：**用于控制stream线程池功能的详细属性，stream线程只在DN生效，该参数仅在enable_thread_pool打开后生效，仅sysadmin用户可以访问。该参数属于POSTMASTER类型参数，请参考[表1](https://gitee.com/opengauss/docs/blob/33dd523b07ca669b90346b9831510ee891c05069/content/docs-lite/zh/docs/Developerguide/重设参数.md#zh-cn_topic_0283137176_zh-cn_topic_0237121562_zh-cn_topic_0059777490_t91a6f212010f4503b24d7943aed6d846)中对应设置方法进行设置。
 
 **取值范围：**字符串，长度大于0
 
@@ -38,7 +38,7 @@
 - stream_thread_num：stream线程池中的线程总数，取值范围是0~4096。其中0的含义是数据库根据系统CPU core的数量来自动配置线程池的线程数，如果参数值大于0，线程池中的线程数等于stream_thread_num。线程池大小推荐根据硬件配置设置，计算公式如下：stream_thread_num = CPU核数*3~5，stream_thread_num最大值为4096。
 - stream_proc_ratio：预留给stream线程的proc数量比例，浮点类型，默认为0.2，预留proc计算方式为：stream_proc_ratio * stream_thread_num。
 - group_num：线程池中的线程分组个数，取值范围是0~64。其中0的含义是数据库根据系统NUMA组的个数来自动配置线程池的线程分组个数，如果参数值大于0，线程池中的线程组个数等于group_num。thread_pool_stream_attr的group_num需与thread_pool_attr的group_num配置和使用保持一致，若设置为不同值，以thread_pool_attr的group_num为准。
-- cpubind_info：线程池是否绑核的配置参数。可选择的配置方式有集中：1. '(nobind)' ，线程不做绑核；2. '(allbind)'，利用当前系统所有能查询到的CPU core做线程绑核；3. '(nodebind: 1, 2)'，利用NUMA组1,2中的CPU core进行绑核；4. '(cpubind: 0-30)'，利用0-30号CPU core进行绑核；5. '(numabind: 0-30)'，在NUMA组内利用0-30号CPU core进行绑核。该参数不区分大小写。thread_pool_stream_attr的cpubind_info需与thread_pool_attr的cpubind_info配置和使用保持一致，若设置为不同值，以thread_pool_attr的cpubind_info为准。
+- cpubind_info：线程池是否绑核的配置参数。可选择的配置方式有：1. '(nobind)' ，线程不做绑核；2. '(allbind)'，利用当前系统所有能查询到的CPU core做线程绑核；3. '(nodebind: 1, 2)'，利用NUMA组1,2中的CPU core进行绑核；4. '(cpubind: 0-30)'，利用0-30号CPU core进行绑核；5. '(numabind: 0-30)'，在NUMA组内利用0-30号CPU core进行绑核。该参数不区分大小写。thread_pool_stream_attr的cpubind_info需与thread_pool_attr的cpubind_info配置和使用保持一致，若设置为不同值，以thread_pool_attr的cpubind_info为准。
 
 **默认值：**
 
@@ -50,7 +50,7 @@ group_num、cpubind_info：参见[thread_pool_attr](https://gitee.com/opengauss/
 
 ## resilience_threadpool_reject_cond
 
-**参数说明**：用于控制线程池过载逃生的堆积会话数占比。该参数仅在GUC参数use_workload_manager和enable_thread_pool打开时生效。该参数属于SIGHUP类型参数，请参考[表1](../Administration/参数设置.md#zh-cn_topic_0283137176_zh-cn_topic_0237121562_zh-cn_topic_0059777490_t91a6f212010f4503b24d7943aed6d846)中对应设置方法进行设置。
+**参数说明**：用于控制线程池过载逃生的堆积会话数占比。该参数仅在GUC参数use_workload_manager和enable_thread_pool打开时生效。该参数属于SIGHUP类型参数，请参考[表1](https://gitee.com/opengauss/docs/blob/33dd523b07ca669b90346b9831510ee891c05069/content/docs-lite/zh/docs/Developerguide/重设参数.md#zh-cn_topic_0283137176_zh-cn_topic_0237121562_zh-cn_topic_0059777490_t91a6f212010f4503b24d7943aed6d846)中对应设置方法进行设置。
 
 **取值范围**：字符串，长度大于0
 
