--- a/content/docs-lite/zh/docs/DataBaseReference/开发人员选项.md
+++ b/content/docs-lite/zh/docs/DataBaseReference/开发人员选项.md
@@ -329,7 +329,7 @@
 
 ## plsql\_show\_all\_error<a name="section232164414549"></a>
 
-**参数说明：**该参数用来控制编译PLPGSQL对象时是否支持跳过报错继续编译，具体影响请参考[DBE\_PLDEVELOPER](DBE_PLDEVELOPER.md)内的说明。
+**参数说明：**该参数用来控制编译PLPGSQL对象时是否支持跳过报错继续编译，具体影响请参考[DBE\_PLDEVELOPER](DBE_PLDEVELOPER.md)内的说明。需要注意的是，部分语句仍会直接报错并停止编译。
 
 该参数属于USERSET类型参数，请参考[表1](重设参数.md#zh-cn_topic_0283137176_zh-cn_topic_0237121562_zh-cn_topic_0059777490_t91a6f212010f4503b24d7943aed6d846)中对应设置方法进行设置。
 
