--- a/content/zh/docs/Administration/管理员.md
+++ b/content/zh/docs/Administration/管理员.md
@@ -10,7 +10,7 @@
 
 系统管理员是指具有SYSADMIN属性的帐户，默认安装情况下具有与对象所有者相同的权限，但不包括dbe\_perf模式的对象权限。
 
-要创建新的系统管理员，请以初始用户或者系统管理员用户身份连接数据库，并使用带SYSADMIN选项的[CREATE USER](../SQLReference/CREATE-USER.md)语句或  [ALTER USER](../SQLReference/ALTER-USER.md)语句进行设置。
+要创建新的系统管理员，请以初始用户或者系统管理员用户身份连接数据库，并使用带SYSADMIN选项的[CREATE USER](CREATE-USER.md)语句或  [ALTER USER](ALTER-USER.md)语句进行设置。
 
 ```
 openGauss=# CREATE USER sysadmin WITH SYSADMIN password "xxxxxxxxx";
@@ -24,11 +24,44 @@ openGauss=# ALTER USER joe SYSADMIN;
 
 ALTER USER时，要求用户已存在。
 
+## 安全管理员
+
+安全管理员是指具有CREATEROLE属性的账户，具有创建、修改、删除用户或角色的权限。 要创建新的安全管理员，三权分立关闭时，请以系统管理员或者安全管理员身份连接数据库，三权分立打开时，请以安全管理员身份连接数据库，并使用带CREATEROLE选项的[CREATE USER](CREATE-USER.md)语句或  [ALTER USER](ALTER-USER.md)语句进行设置。 
+
+
+```
+openGauss=# CREATE USER createrole WITH CREATEROLE password "xxxxxxxxxxx";
+```
+
+或者
+
+```
+openGauss=# ALTER USER joe CREATEROLE;
+```
+ 
+ALTER USER时，要求用户已存在。  
+## 审计管理员
+
+审计管理员是指具有AUDITADMIN属性的账户，具有查看和删除审计日志的权限。
+要创建新的审计管理员，三权分立关闭时，请以系统管理员或者安全管理员身份连接数据库，三权分立打开时，请以安全管理员身份连接数据库，并使用带AUDITADMIN选项的[CREATE USER](CREATE-USER.md)语句或  [ALTER USER](ALTER-USER.md)语句进行设置。
+ 
+
+```
+openGauss=# CREATE USER auditadmin WITH AUDITADMIN password "xxxxxxxxxxx";
+```
+  或者 
+  
+```
+openGauss=# ALTER USER joe AUDITADMIN;
+```
+
+ALTER USER时，要求用户已存在。
+
 ## 监控管理员<a name="section4709123485918"></a>
 
 监控管理员是指具有MONADMIN属性的帐户，具有查看dbe\_perf模式下视图和函数的权限，亦可以对dbe\_perf模式的对象权限进行授予或收回。
 
-要创建新的监控管理员，请以系统管理员身份连接数据库，并使用带MONADMIN选项的[CREATE USER](../SQLReference/CREATE-USER.md)语句或[ALTER USER](../SQLReference/ALTER-USER.md)语句进行设置。
+要创建新的监控管理员，请以系统管理员身份连接数据库，并使用带MONADMIN选项的[CREATE USER](CREATE-USER.md)语句或[ALTER USER](ALTER-USER.md)语句进行设置。
 
 ```
 openGauss=# CREATE USER monadmin WITH MONADMIN password "xxxxxxxxx";
@@ -46,7 +79,7 @@ ALTER USER时，要求用户已存在。
 
 运维管理员是指具有OPRADMIN属性的帐户，具有使用Roach工具执行备份恢复的权限。
 
-要创建新的运维管理员，请以初始用户身份连接数据库，并使用带OPRADMIN选项的[CREATE USER](../SQLReference/CREATE-USER.md)语句或[ALTER USER](../SQLReference/ALTER-USER.md)语句进行设置。
+要创建新的运维管理员，请以初始用户身份连接数据库，并使用带OPRADMIN选项的[CREATE USER](CREATE-USER.md)语句或[ALTER USER](ALTER-USER.md)语句进行设置。
 
 ```
 openGauss=# CREATE USER opradmin WITH OPRADMIN password "xxxxxxxxx";
@@ -64,7 +97,7 @@ ALTER USER时，要求用户已存在。
 
 安全策略管理员是指具有POLADMIN属性的帐户，具有创建资源标签、脱敏策略和统一审计策略的权限。
 
-要创建新的安全策略管理员，请以系统管理员用户身份连接数据库，并使用带POLADMIN选项的[CREATE USER](../SQLReference/CREATE-USER.md)语句或[ALTER USER](../SQLReference/ALTER-USER.md)语句进行设置。
+要创建新的安全策略管理员，请以系统管理员用户身份连接数据库，并使用带POLADMIN选项的[CREATE USER](CREATE-USER.md)语句或[ALTER USER](ALTER-USER.md)语句进行设置。
 
 ```
 openGauss=# CREATE USER poladmin WITH POLADMIN password "xxxxxxxxx";
