1.对docs-lite下的防篡改特性约束，补充“不支持Ustore表”说明。

--- a/content/docs-lite/zh/docs/AboutopenGauss/账本数据库机制.md
+++ b/content/docs-lite/zh/docs/AboutopenGauss/账本数据库机制.md
@@ -25,7 +25,7 @@ char, abstime, bigint, boolean, bytea, character varying, character, date, doubl
 
 ## 特性约束<a name="section06531946143616"></a>
 
--   防篡改模式下的行存表具有防篡改属性，而临时表、UNLOGGED表、列存表、时序表等均不具有防篡改属性。
+-   防篡改模式下的行存表具有防篡改属性，而临时表、UNLOGGED表、列存表、时序表、Ustore表等均不具有防篡改属性。
 -   不允许修改防篡改用户表的结构，不允许truncate防篡改相关表，不允许将防篡改用户表切换到普通的Schema中，不允许将非防篡改表切换到防篡改Schema中。
 -   不支持指定二级分区表为防篡改表。防篡改表如果为分区表，则不支持exchange partition、drop partition、truncate partition等操作。
 -   不支持使用函数、TRIGGER修改防篡改用户表数据。
